Fixed flickering image issue, added notice to communicate when all games have been played, added styling

--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,35 @@
+* {
+  box-sizing: border-box;
+}
 
+header {
+  display: flex;
+  font-size: 80px;
+  color: white;
+  background-color: rgb(242, 0, 255);
+  align-content: center;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 20px 0px 0px 0px;
+}
+
+body {
+  margin: 0;
+  background-color: white;
+  align-content: center;
+  justify-content: center;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.description {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.page {
+  display: grid;
+  width: 100%;
+  margin: 0 auto;
+}
